samples/_failures_safe/1761297507_f4f5dc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a8f92e27.c: In function ‘main’:
./samples/SAFE/__tmp_a8f92e27.c:154:13: error: expected declaration or statement at end of input
  154 |             return EXIT_FAILURE;
      |             ^~~~~~
./samples/SAFE/__tmp_a8f92e27.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a8f92e27.c:154:13: error: expected declaration or statement at end of input
